tests/ui/typeck/no-expectation-for-unop-operand.stderr
error[E0308]: mismatched types
  --> $DIR/no-expectation-for-unop-operand.rs:8:19
   |
LL |     let _: i8 = -{&0i8};
   |                   ^^^^ expected `i8`, found `&i8`
   |
help: consider removing the borrow
   |
LL -     let _: i8 = -{&0i8};
LL +     let _: i8 = -{0i8};
   |

error[E0308]: mismatched types
  --> $DIR/no-expectation-for-unop-operand.rs:10:19
   |
LL |     let _: i8 = !{&0i8};
   |                   ^^^^ expected `i8`, found `&i8`
   |
help: consider removing the borrow
   |
LL -     let _: i8 = !{&0i8};
LL +     let _: i8 = !{0i8};
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
